<resources>
    <string name="app_name">HQ tech</string>

    <!--MainActivity-->
    <string name="Btn_registro">Registro</string>
    <string name="Btn_Login">Login</string>

    <!--ACTIVIDAD REGISTRO-->
    <string name="CrearCuentaTXT">Crear una Cuenta</string>
    <string name="NombreEt">Nombres</string>
    <string name="CorreoEt">Correo electronico</string>
    <string name="ContraseñaEt">Contraseña</string>
    <string name="ConfirmarContraseñaEt">Confirmar contraseña</string>
    <string name="Registrarusuario">Registrar</string>
    <string name="TengoUnaCuenta">Tengo una cuenta</string>
    <!--MENÚ PRINCIPAL-->
    <string name="CerrarSesión">Salir</string>
    <!--Actividad login-->
    <string name="IniciarSesiónTxt">Iniciar sesión</string>
    <string name="CorreoLogin">Correo</string>
    <string name="PassLogin">Contraseña</string>
    <string name="Btn_loging">Ingresar</string>
    <string name="UsuarioNuevoTXT">¿No tienes una cuenta?. Registrate</string>
    <!--Menu principal-->
    <string name="BienVendioPrincipal">Bienvenido(a)</string>
    <string name="NombresPrincipal"> -- </string>
    <string name="CorreoPrincipal"> -- </string>
    <!--PaginaPrincipalCausa-->
    <string name="productos1">Productos</string>
    <string name="Nosotrosm1">Nosotros</string>
    <string name="saliendoCD">Exit</string>
    <string name="Titulo">HyQ Tech</string>


</resources>